# Digitaler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
app/: buildandstart.sh  builddebugandstart.sh  buildreleaseandstart.sh  debug.bat  release.bat
include/: AtlasMap.hpp  Block.hpp  BlockAndPathData.hpp  BlockSelector.hpp  DataResourceManager.hpp  IOHandler.hpp  Include.hpp  Makros.hpp  MyApp.hpp  MyFrame.hpp  MyRect.hpp  OpenGlDefines.hpp  Path.hpp  PngManager.hpp  RenderTextUtility.hpp  Renderer.hpp  ShaderManager.hpp  pch.hpp
resources/art/: PreparePngs
resources/shaders/: ShadersToCharArray
resources/shaders/Source/: And.frag  And.vert  AreaSelect.frag  AreaSelect.geom  AreaSelect.vert  Assets.frag  Assets.geom  Assets.vert  Background.frag  Background.vert  Block.frag  Block.vert  CopyTexture.frag  CopyTexture.vert  Gaussian.frag  Gaussian.vert  HighlightPath.frag  HighlightPath.vert  HighlightPathCornerOverdraw.frag  IntersectionPath.frag  IntersectionPath.vert  LiquidGlass.frag  LiquidGlass.vert  Mux.frag  Mux.vert  NDot.frag  NDot.vert  NotTriangle.frag  NotTriangle.vert  Or.frag  Or.vert  Path.frag  Path.vert  Pin.frag  Pin.vert  RoundPin.frag  RoundPin.vert  SevenSeg.frag  SevenSeg.vert  SixteenSeg.frag  (+6 more)
src/: Block.cpp  BlockAndPathData.cpp  BlockSelector.cpp  DataResourceManager.cpp  IOHandler.cpp  Main.cpp  MyFrame.cpp  Path.cpp  PngManager.cpp  Quellen.cpp  RenderTextUtility.cpp  Renderer.cpp  ShaderManager.cpp
